# Lotto

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
lotto/: manage.py
lotto/api/: views.py
lotto/settings/: asgi.py  server.py  settings.py  url_router.py  urls.py  wsgi.py
lotto/tables/: apps.py
lotto/tables/migrations/: 0001_initial.py
lotto/tables/models/service/: __init__.py  lotto_user.py  user.py
lotto/user/: serializers.py  views.py
