[project]
name = "ShortUrl"
version = "1.0.0"
description = "url단축 서비스 api입니다."
requires-python = "3.11.*"

[dependencies]
Django = "4.2"
pytest = "8.1.1"
pytest-django = "4.8.0"
djangorestframework = "3.14.0"
psycopg2-binary = "2.9.9"


[tool.pytest.ini_options]
addopts = "-ra -q"
python_files = ["test_*.py"]
markers = [
    "unit"
]

